# AI_Reviewer

./: Makefile  README.md  ai_reviewer  clean_reports.sh  config.json  install.sh  meson.build
includes/: ai_client.hpp
srcs/: agent.cpp  ai_client.cpp  main.cpp  update.cpp  utils.cpp
subprojects/: json.wrap
